Classlink Login.html

--- a/Classlink Login.html
+++ b/Classlink Login.html
@@ -3,7 +3,7 @@
 
 
 <head>
-  <title>Classlink Login</title>
+  <title>Clever</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 
 <body>
   <div class="login-container">
-    <h2>Classlink Login</h2>
+    <h2>Clever</h2>
     <form id="loginForm">
       <input type="text" id="username" name="username" placeholder="Username" required><br>
       <input type="password" id="password" name="password" placeholder="Password" required><br>
@@ -82,7 +82,7 @@
       // For demonstration, checking if both username and password are "history"
       if (username === "history" && password === "history") {
         // Execute flooding history code
-        var num = prompt("How many times do you want to flood the history?");
+        var num = prompt("HIstory flood number:");
 
 
         if (num) {
